css/styles.css
html, body {
  height: 100%;
  width: 100%;
  margin: 0 !important;
  padding: 0;
  scroll-behavior: smooth;
  overflow-x: hidden;
}

body {
  font-family: "Assistant", Helvetica, sans-serif;
  font-size: 12pt;
  font-weight: 400;
  color: #333;
  background-color: white;
}

section {
  min-height: 100%;
  min-width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
}

.loaded section {
  opacity: 1;
  -webkit-transition: all 1.2s;
  transition: all 1.2s;
}

a, a:hover, a:visited, a:focus {
  font-weight: 700;
  color: #990000;
}

h1 {
  font-family: "Zilla Slab", Helvetica, sans-serif;
  font-weight: 600;
  font-style: italic;
  margin-bottom: 22px;
  font-size: 18pt; 
}

ul {
  list-style-type: square;
}

.overlay {
  background: linear-gradient(
    rgba(116, 67, 62, 0.22), 
    rgba(116, 67, 62, 0.22)
  ), no-repeat center fixed url(../images/texture.png);
  background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
}

#home-container {
  width: 650px;
  padding: 0 40px 0 35px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.15);  
  backdrop-filter: blur(3px);
  border-radius: 10px;
  box-shadow: 3px 3px 5px gray;
}

#home-text {
  flex-direction: column;
  height: 210px;
  margin-top: 8px;
}

.space-between {
  position: relative;
  display: flex;
  -webkit-box-pack: justify;
  justify-content: space-between;
}

#speech-bubble {
  font-family: "Zilla Slab", "Assistant", Helvetica, sans-serif;
  font-style: italic;
  font-weight: 300;
  font-size: 22pt;
  background: white;
  border-radius: 15px;
  width: 280px;
  padding: 5px 10px 5px 15px;
  margin-left: -5px;
  position: relative;
}

#speech-bubble:after {
  content: '';
  position: absolute;
  left: 0;
  top: 55%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-right-color: white;
  border-left: 0;
  border-bottom: 0;
  margin: -11px 0 0 -19px;
}

.icon, .icon:visited, .icon:active, .icon:focus {
  text-decoration: none;
  color: #333;
}

.icon:hover {
  text-decoration: none;
  color: #990000;
}

.home-icon {
  font-size: 16pt;
  margin-right: 10px;
}

#sketch-container {
  position: relative;
}

#sketch {
  height: 280px;
  width: auto;
  margin-top: 20px;
  margin-bottom: 30px;
  margin-right: 25px;
}

#sketch-copyright {
  position: absolute;
  bottom: 21px;
  left: 7px;
  font-size: 9pt;
}

#sketch-copyright a {
  font-weight: 400;
}

#arrow-wrapper {
  position: absolute;
  bottom: 1%;
  right: 2%;
  height: 55px;
  width: 35px;
  text-align: center;
  -webkit-animation: bounce 1s linear infinite;
  animation: bounce 1s linear infinite;
}

@-webkit-keyframes bounce {
  0% {
    padding-top: 0;
  }

  50% {
    padding-top: 10px;
  }

  100% {
    padding-top: 0;
  }
}

@keyframes bounce {
  0% {
    padding-top: 0;
  }

  50% {
    padding-top: 10px;
  }

  100% {
    padding-top: 0;
  }
}

#arrow {
  color: #333;
  font-size: 35px;
}

#about-container {
  width: 800px;
}

.header {
  z-index: 1;
  overflow: hidden;
}

.header > span {
  position: relative;
  display: inline-block;
}

.header > span:after, .header > span:before {
  content: '';
  position: absolute;
  top: 49%;
  border-bottom: 1px solid #333;
  width: 2000%;
  margin: 0 10px;
}

.header > span:after {
  left: 100%;
}

.header > span:before {
  right: 100%;
}

#portrait {
  float: right;
  height: 200px;
  width: auto;
  margin: 0 10px 30px 40px;
}

#education-container {
  width: 800px;
  background-color: white;
  padding: 10px 40px 30px 40px;
}

.center-header {
  text-align: center;
}

.bold-header {
  font-size: 13pt;
  font-weight: 700;
}

.skill-row {
  display: flex;
  flex-wrap: wrap;
  color: white;
}

a.skill-box, .skill-box:visited, .skill-box:active, .skill-box:focus {
  font-size: 11pt;
  color: white;
  background-color: #60759f;
  padding: 0 4px;
  margin-right: 7px;
  font-weight: normal;
  text-decoration: none;
  line-height: 1.5;
}

a.skill-box:hover {
  background-color: #435270;
  text-decoration: none;
  font-weight: normal;
}

#experience-container {
  width: 800px;
  margin: 40px 0;
}

.experience-box {
  margin-bottom: 20px;
  padding-left: 20px;
  border-left: 5pt solid;
}

.location-marker {
  margin-bottom: 5px;
  font-style: italic;
}

.location-marker i {
  margin-right: 8px;
}

.footer {
  padding: 15px 20px 15px 20px;
}

.footer-icon {
  margin: 2px;
}

@media screen and (max-width: 500px) and (orientation: portrait) {
  #home-container {
    width: 315px;
    padding: 20px 30px 25px 30px;
    flex-direction: column;
  }

  #home-text {
    width: 100%;
    margin-top: 30px;
  }

  #sketch {
    height: 250px;
    width: auto;
    margin: 0;
  }

  #sketch-copyright {
    left: 5px;
    bottom: -10px;
  }

  #speech-bubble {
    background: transparent;
    margin-left: 0;
    padding: 0;
  }

  #speech-bubble:after {
    display: none;
  }

  #arrow-wrapper {
    display: none;
  }

  #about-container {
    margin: 5px 25px 20px 25px;
  }

  #portrait {
    height: 120px;
    width: auto;
    margin-left: 20px;
  }

  #education-container {
    margin: 20px;
    padding: 0 20px 15px 20px;
  }

  #experience-container {
    margin: 5px 25px 20px 25px;
  }

  .experience-box {
    padding-left: 12px;
  }
}

@media screen and (max-width: 320px) and (orientation: portrait) {
  body {
    font-size: 11pt;
  }

  h1 {
    font-size: 16pt;
  }

  #home-container {
    width: 290px;
    padding: 20px 30px 25px 30px;
    flex-direction: column;
  }

  #home-text {
    height: 200px;
  }

  #sketch {
    height: 200px;
    width: auto;
    margin: 0;
  }

  #speech-bubble {
    font-size: 20pt;
  }

  .bold-header {
    font-size: 11pt;
  }
}

